<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fitness"
        android:title="Fitness"
        android:icon="@android:drawable/btn_radio"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nutrition"
        android:title="@string/nutrition"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always"/>


    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/stats"
        android:title="@string/stats"
        android:icon="@android:drawable/ic_menu_recent_history"
        app:showAsAction="always"
        />


</menu>